oops, downgrade some stuff for java 8